--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -32,7 +32,7 @@
   "rank": "排行",
   "repo": "仓库",
   "text-level-1": "小笨蛋要多练一下吗?",
-  "text-level-2": "TCL",
+  "text-level-2": "小笨蛋mua",
   "text-level-3": "TQL",
   "text-level-4": "您",
   "text-level-5": "人?",
